--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "env": {
     "PARSE_MOUNT": {
       "description": "Configure Parse API route.",
-      "value": "/parse"
+      "value": “/colorcode”
     },
     "APP_ID": {
       "description": "A unique identifier for your app.",
@@ -19,7 +19,7 @@
     },
     "SERVER_URL": {
       "description": "URL to connect to your Heroku instance (update with your app's name + PARSE_MOUNT)",
-      "value": "http://yourappname.herokuapp.com/parse"
+      "value": "http://color-code.herokuapp.com/parse"
     }
   },
   "image": "heroku/nodejs",
